--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,11 +1,19 @@
-$primary-color: #444;
-$secondary-color: #eece1a;
+$background-color: #5f5f5f;
+$selected-color: #15a97d;
+$primary-active-color: #00c0a3;
+$secondary-active-color: #ccc4bc;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
-$background-opacity: 0.9;
+$background-opacity: 0.5;
 
 @mixin easeOut {
   transition: all 0.5s ease-out;
+}
+
+@mixin fadeIn {
+  animation-name: fade-in;
+  animation-fill-mode: fill;
+  animation-duration: 1s;
 }
 
 @mixin background {
@@ -14,16 +22,17 @@ $background-opacity: 0.9;
       background: $home-image;
       background-attachment: fixed;
       background-size: cover;
+      background-position-y: 25%;
 
       &:after {
-        content: '';
+        content: "";
         position: absolute;
         top: 0;
         right: 0;
         width: 100%;
         height: 100%;
         z-index: -1;
-        background: rgba($primary-color, $background-opacity);
+        background: rgba($background-color, $background-opacity);
       }
     }
   }
@@ -60,5 +69,17 @@ $background-opacity: 0.9;
 @mixin mediaXl {
   @media screen and (min-width: 1171px) {
     @content;
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  80% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 1;
   }
 }
