--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,5 @@
-@import 'config';
-@import 'menu';
+@import "config";
+@import "menu";
 
 * {
   box-sizing: border-box;
@@ -7,11 +7,11 @@
 
 body {
   @include background;
-  background: $primary-color;
-  color: set-text-color($primary-color);
+  background: $background-color;
+  color: set-text-color($background-color);
   height: 100%;
   margin: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5;
 }
 
@@ -29,7 +29,7 @@ h3 {
   &.sm-heading {
     margin-bottom: 2rem;
     padding: 0.2rem 1rem;
-    background: rgba(lighten($primary-color, 2), 0.5);
+    background: rgba(lighten($background-color, 2), 0.5);
   }
 }
 
@@ -44,11 +44,17 @@ header {
   width: 100%;
 }
 
+.text-primary {
+  color: $primary-active-color;
+}
+
 .text-secondary {
-  color: $secondary-color;
+  color: $secondary-active-color;
 }
 
 main {
+  @include fadeIn;
+
   padding: 4rem;
   // height: 100%;
   min-height: calc(100vh - 60px);
@@ -61,7 +67,7 @@ main {
       @include easeOut;
 
       &:hover {
-        color: $secondary-color;
+        color: $primary-active-color;
       }
     }
   }
@@ -78,15 +84,19 @@ main {
   display: grid;
   grid-gap: 30px;
   grid-template-areas:
-    'bioimage bio bio'
-    'job1 job2 job3';
+    "bioimage bio bio"
+    "job1 job2 job3";
   grid-template-columns: repeat(3, 1fr);
 
   .bio-image {
     grid-area: bioimage;
     margin: auto;
+    width: 250px;
+    height: 250px;
+    background-size: cover;
+    background-repeat: no-repeat;
     border-radius: 50%;
-    border: $secondary-color 3px solid;
+    border: $primary-active-color 3px solid;
   }
 
   .bio {
@@ -107,9 +117,9 @@ main {
   }
 
   .job {
-    background: lighten($primary-color, 5);
+    background: lighten($background-color, 5);
     padding: 0.5rem;
-    border-bottom: $secondary-color 5px solid;
+    border-bottom: $primary-active-color 5px solid;
   }
 }
 
@@ -125,7 +135,7 @@ main {
 
     &:hover {
       opacity: 0.5;
-      border-color: $secondary-color;
+      border-color: $primary-active-color;
       @include easeOut;
     }
   }
@@ -135,23 +145,19 @@ main {
 .boxes {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
   align-items: center;
   margin-top: 1rem;
 
   div {
     font-size: 2rem;
-    border: 3px #fff solid;
     padding: 1.5rem 2.5rem;
     margin-bottom: 3rem;
     @include easeOut;
 
     &:hover {
-      padding: 0.5rem 1.5rem;
-      background: $secondary-color;
-      color: set-text-color($secondary-color);
+      color: $primary-active-color;
       span {
-        color: set-text-color($secondary-color);
+        color: $selected-color;
       }
     }
   }
@@ -164,29 +170,29 @@ main {
   border: 0;
   margin-bottom: 0.3rem;
   &:hover {
-    background: $secondary-color;
-    color: set-text-color($secondary-color);
+    background: $primary-active-color;
+    color: set-text-color($primary-active-color);
   }
 }
 
 .btn-dark {
   @extend .btn;
-  background: darken($primary-color, 50);
+  background: darken($background-color, 50);
   color: #fff;
 }
 
 .btn-light {
   @extend .btn;
-  background: lighten($primary-color, 50);
+  background: lighten($background-color, 50);
   color: #333;
 }
 
 #main-footer {
   text-align: center;
   padding: 1rem;
-  background: darken($primary-color, 10);
-  color: set-text-color($primary-color);
+  background: darken($background-color, 10);
+  color: set-text-color($background-color);
   height: 60px;
 }
 
-@import 'mobile';
+@import "mobile";
