--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -85,6 +85,11 @@
       margin-top: 1rem;
       font-size: 5rem;
     }
+    .boxes {
+      div {
+        font-size: 1.5rem;
+      }
+    }
   }
 
   .projects {
