--- a/scss/main.scss
+++ b/scss/main.scss
@@ -150,14 +150,14 @@ main {
 
   div {
     font-size: 2rem;
-    padding: 1.5rem 2.5rem;
+    padding-right: 1.5rem;
     margin-bottom: 3rem;
     @include easeOut;
 
     &:hover {
       color: $primary-active-color;
       span {
-        color: $selected-color;
+        color: $primary-active-color;
       }
     }
   }
