--- a/scss/main.scss
+++ b/scss/main.scss
@@ -89,7 +89,9 @@ main {
   grid-gap: 30px;
   grid-template-areas:
     "bioimage bio bio"
-    "job1 job2 job3";
+    "none pros cons"
+    "none address address"
+    "none jobs jobs";
   grid-template-columns: repeat(3, 1fr);
 
   .bio-image {
@@ -108,22 +110,67 @@ main {
     font-size: 1.5rem;
   }
 
-  .job-1 {
-    grid-area: job1;
+  .pros {
+    grid-area: pros;
+    font-size: 1.5rem;
+  }
+  .cons {
+    grid-area: cons;
+    font-size: 1.5rem;
   }
 
-  .job-2 {
-    grid-area: job2;
+  .address {
+    grid-area: address;
+    font-size: 1.5rem;
+    display: grid;
+    grid-gap: 30px;
+    grid-template-areas:
+      "title title"
+      "contact project";
+    grid-template-columns: repeat(2, 1fr);
+
+    .title {
+      grid-area: title;
+    }
+    .address-contact {
+      grid-area: contact;
+    }
+    .address-project {
+      grid-area: project;
+    }
   }
 
-  .job-3 {
-    grid-area: job3;
-  }
+  .jobs {
+    grid-area: jobs;
+    font-size: 1.5rem;
+    display: grid;
+    grid-template-areas:
+      "title title"
+      "job1 job2";
+    grid-template-columns: repeat(2, 1fr);
 
-  .job {
-    background: lighten($background-color, 5);
-    padding: 0.5rem;
-    border-bottom: $primary-active-color 5px solid;
+    .job {
+      background: lighten($background-color, 5);
+      padding: 0.5rem;
+      margin: 0.5rem;
+      border-bottom: $secondary-active-color 5px solid;
+      font-size: 1.2rem;
+
+      &:hover {
+        border-color: $selected-color;
+        @include easeOut;
+      }
+    }
+
+    .title {
+      grid-area: title;
+    }
+    .job-1 {
+      grid-area: job1;
+    }
+    .job-2 {
+      grid-area: job2;
+    }
   }
 }
 
@@ -139,6 +186,19 @@ main {
 
     &:hover {
       opacity: 0.5;
+      border-color: $selected-color;
+      @include easeOut;
+    }
+  }
+  .project-info {
+    background: lighten($background-color, 5);
+    min-height: 150px;
+    padding: 0.5rem;
+    color: #fff;
+    border-bottom: $secondary-active-color 5px solid;
+    font-size: 1.2rem;
+
+    &:hover {
       border-color: $selected-color;
       @include easeOut;
     }
