--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -61,11 +61,11 @@
     }
   }
 
-  ul {
-    list-style-type: none;
-  }
-
   .about-info {
+    ul {
+      list-style-type: none;
+    }
+
     grid-template-areas:
       "bioimage"
       "bio"
@@ -92,6 +92,10 @@
       grid-template-columns: 1fr;
     }
   }
+
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 // Smartphones
@@ -111,5 +115,9 @@
         font-size: 1.5rem;
       }
     }
+  }
+
+  .projects {
+    grid-template-columns: 1fr;
   }
 }
