--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -90,7 +90,7 @@
     .portrait {
       width: 250px;
       height: 250px;
-      background: url("../img/portrait_small.jpg");
+      background: url("../img/portrait.jpg");
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
