--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -50,7 +50,7 @@
     transform: translate3d(100%, 0, 0);
 
     .portrait {
-      background: url("../img/portrait_small.jpg");
+      background: url("../img/portrait.jpg");
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
