--- a/scss/main.scss
+++ b/scss/main.scss
@@ -146,7 +146,8 @@ main {
     display: grid;
     grid-template-areas:
       "title title"
-      "job1 job2";
+      "job1 job2"
+      "job3 job3";
     grid-template-columns: repeat(2, 1fr);
 
     .job {
@@ -171,6 +172,9 @@ main {
     .job-2 {
       grid-area: job2;
     }
+    .job-3 {
+      grid-area: job3;
+    }
   }
 }
 
@@ -192,7 +196,7 @@ main {
   }
   .project-info {
     background: lighten($background-color, 5);
-    min-height: 150px;
+    min-height: 225px;
     padding: 0.5rem;
     color: #fff;
     border-bottom: $secondary-active-color 5px solid;
