--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -88,7 +88,8 @@
       grid-template-areas:
         "title"
         "job1"
-        "job2";
+        "job2"
+        "job3";
       grid-template-columns: 1fr;
     }
   }
